--- a/src/style.css
+++ b/src/style.css
@@ -115,7 +115,7 @@ button {
 }
 
 #help {
-    visibility: hidden;
+    /*visibility: hidden;*/
     position:fixed;
     z-index: 1;
     background-color:#ffffff;
